# superintendent

./: .env.example  .gitignore  README.md  START_HERE.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: pages.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/lib/: db.ts  (+5 more)
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.module.css  App.tsx  css-modules.d.ts  main.tsx  phoenix.d.ts  tokens.css
docs/: DEMO.md  REAL_WORLD.md  ROADMAP.md
docs/design/: superintendent-handoff.html
docs/design/mockups/: blueprint-aclonica.html  comparison.html  plate-1.html
docs/superpowers/specs/: 2026-05-28-design-response-interface-artisan.md  2026-05-28-design-response-voltagent-ui-designer.md  2026-05-28-designer-brief.md  2026-05-28-superintendent-v0.1-design.md
mosquitto/: mosquitto.conf
processor/: README.md  process_flight.py
scripts/: dev-up.sh
sensor_service/: .gitignore  README.md  mix.exs
sensor_service/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
sensor_service/lib/: sensor_service.ex  sensor_service_web.ex
sensor_service/lib/sensor_service/: application.ex  repo.ex  sensors.ex
sensor_service/lib/sensor_service_web/: endpoint.ex  router.ex  telemetry.ex
sensor_service/priv/repo/: seeds.exs
sensor_service/test/: test_helper.exs
spikes/vari-thesis/: .gitignore  indices.py
super-raster/: Cargo.toml
super-raster/.cargo/: config.toml
super-raster/src/: indices.rs  main.rs  manifest.rs  ortho.rs  overlay.rs  zones.rs
(+34 files in other folders)
