[package]
name = "super-raster"
version = "0.1.0"
edition = "2021"
description = "Phase-2 Rust replacement for the Python flight processor (GDAL vegetation indices)."

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
# bindgen feature: generate FFI bindings at build time — gdal-sys ships no
# pre-built bindings for GDAL 3.12 (needs libclang).
gdal = { version = "0.19", features = ["bindgen"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
